--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>cicd-demo-app</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<artifactId>${app}</artifactId>
+	<version>${revision}</version>
 	<packaging>jar</packaging>
 
 	<name>cicd-demo-app</name>
@@ -21,6 +21,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<revision>1.0.0-SNAPSHOT</revision>
+		<app>cicd-demo-app</app>
 	</properties>
 
 	<dependencies>
