--- a/pom.xml
+++ b/pom.xml
@@ -168,14 +168,16 @@
 	</build>
 
 	<distributionManagement>
-		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<url>http://localhost:8081/repository/maven-snapshots/</url>
-		</snapshotRepository>
-		<releaseRepository>
-			<id>nexus-releases</id>
-			<url>http://localhost:8081/repository/maven-releases/</url>
-		</releaseRepository>
- 	</distributionManagement>
+	    <repository>
+	    	<id>nexus</id>
+	      	<name>Releases</name>
+	      	<url>http://localhost:8081/repository/maven-releases</url>
+	    </repository>
+	    <snapshotRepository>
+	      	<id>nexus</id>
+	      	<name>Snapshot</name>
+	      	<url>http://localhost:8081/repository/maven-snapshots</url>
+	    </snapshotRepository>
+	 </distributionManagement>
 
 </project>
